testsuite/tests/tool-toplevel/gpr1041.reference
File "compiler internals", line 1:
Error: Unbound module Stdlib
