testsuite/tests/tool-toplevel/gpr1041.ml
(* TEST
  * setup-ocamlc.byte-build-env
  ** script
   script = "sh ${test_source_directory}/gpr1041.sh"
  *** check-program-output
*)
